--- a/index.html
+++ b/index.html
@@ -2,13 +2,26 @@
 <html>
 <head>
 	<title>Giphy Fun!</title>
+	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
+
 </head>
 
 <body>
-<div id="buttons-appear-here"></div>
-
- <div id="gifs-appear-here">
-  </div>
+<div class="container">
+<div class="row">
+<div class="col-md-12">
+		 <div id="buttons-appear-here"></div>
+		 </div>
+	</div>	 
+	<br>
+	<hr>
+		<div class="row">
+		<div class="col-md-10">
+		 <div id="gifs-appear-here"></div>
+		 </div>
+	</div>
+</div>  
 </body>
  <script src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
 <script type="text/javascript" src="script.js"></script>
