--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 		 <div id="buttons-appear-here"></div>
 		 </div>
 	</div>	 
+<div class="row">
+	<input class="col-md-offset-8" type="text" name="new-animal" placeholder="Add your own!">
+</div>
 	<br>
 	<hr>
 		<div class="row">
