--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 		 </div>
 	</div>	 
 <div class="row">
-	<input class="col-md-offset-8" type="text" name="new-animal" placeholder="Add your own!">
+	<form class="col-md-offset-8" >
+		<h4>Add Your Own Animal:</h4>
+		<input type="text" name="new-animal" placeholder="Add your own!">
+		<button type="submit" class="btn-primary">Submit</button>
+	</form>
 </div>
 	<br>
 	<hr>
