--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Giphy Fun!</title>
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
-
+	
 </head>
 
 <body>
@@ -17,8 +17,8 @@
 <div class="row">
 	<form class="col-md-offset-8" >
 		<h4>Add Your Own Animal:</h4>
-		<input type="text" name="new-animal" placeholder="Add your own!">
-		<button type="submit" class="btn-primary">Submit</button>
+		<input type="text" id="new-animal" placeholder="Add your own!">
+		<button type="submit" class="btn-primary" id="submit-animal">Submit</button>
 	</form>
 </div>
 	<br>
